--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,40 +20,41 @@ code {
 }
 section{
   box-shadow: 0 0 5px #ccc;
-  padding: 15px 10px;
+  padding: 20px 10px;
 }
-.modal{
-  height: 100vh;
-  width: 100vw;
-  background-color: black;
-  position: fixed;
+.lgoogle {
+  right: 62px;
+  float: right;
+  z-index: 999;
+  overflow: hidden;
+  position: sticky;
   top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.5s;
+  
 }
-.modal:active{
-  opacity: 1;
-  pointer-events: all;
+.lgoogle:hover{
+  color: lightseagreen;
 }
+.MuiButton-text {
+  padding: 6px 8px;
 
-.modal__content{
-  padding: 20px;
-  border-radius: 12px;
-  background-color: black;
-  transform: scale(0.5);
-  transition: 0.4s all;
-  width: 50vw;
+} 
+.MuiButton-text {
+  padding: 7px 8px;
 }
-.open-btn{
-  margin: 10px 20px;
-  padding: 20px;
-  font-size: 2rem;
+.profile{
+  width: 20px;
+  margin-left: 95.4%;
+  display: flex;
+  border: 0;
+  margin-top: 4px;
 }
-.modal__content.active{
-  transform: scale(1);
+.home{
+  display: flex;
+  float: right;
+}
+.home h1{
+  font-size: 12px;
+  align-items: center;
+  margin: 11px 5px;
+
 }
